# pacman

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: c-cpp.yml
AI/: ai.c  ai.h
Assets/: map.txt  upwork_job_1_pacman.webm
GameLogic/: game_logic.c  game_logic.h
GameObject/: game_object.c  game_object.h
Graphics/: graphics.c  graphics.h
Input/: colours.c  colours.cpp  colours.h  input.c  input.h
Map/: map.c  map.h
Physics/: physics.c  physics.h
Utils/: utils.c  utils.h
